# landing-okak-token

./: .gitignore  Anchor.toml  metadata.json  package-lock.json  package.json  server.js  тз.md
app/: index.html
front/landing/: package.json
front/landing/app/: page.tsx
front/okaktoken/: package-lock.json
front/okaktoken/app/: FloatingLinks.tsx  images.icoZone.Identifier  layout.tsx  page.tsx
front/okaktoken/public/images/: sticker.pngZone.Identifier
programs/okak/: Cargo.toml
programs/okak/src/: lib.rs
public/: send-tokens.html
scripts/: check-balance.js  checkToken.js  disableMint.js  send-tokens-cli.js  set-spl-metadata.js  update-metadata.js
tests/: okak.ts
