[package]
name = "okak"
version = "0.1.0"
description = "OkakCat - The Surprised Cat Meme Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "okak"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

